@@ -14,7 +14,7 @@ nodist_man1_MANS	= scour.1
 CLEANFILES              = scour.1 scour.conf
 AM_CPPFLAGS		= -I$(top_builddir)           -I$(top_srcdir) \
 			  -I$(top_builddir)/log       -I$(top_srcdir)/log \
-			  -I$(top_builddir)/registry  -I$(top_srcddir)/registry \
+			  -I$(top_builddir)/registry  -I$(top_srcdir)/registry \
 			  -I$(top_builddir)/protocol2 -I$(top_srcdir)/protocol2 \
 			  -I$(top_builddir)/protocol  -I$(top_srcdir)/protocol \
 			  -I$(top_builddir)/misc      -I$(top_srcdir)/misc 
